test/suites/fail-lower/L-012.expected
  × One or more errors occured.

Error: L-012

  × Used named argument wrong for wildcard parameter
   ╭─[L-012.pol:3:13]
 2 │ 
 3 │ data Option(_: Type) {
   ·             ─
 4 │     None(elem: Type): Option(elem),
   ╰────
